# pyscoundrel

./: .gitignore  DUNGEON_CONFIGURATION.md  LOGGING.md  QUICKSTART.md  README.md  example.py  example_dungeon.yaml  pyproject.toml
.github/scripts/: ci_summary.py
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/api/: agents.rst  dungeon.rst  game.rst  index.rst  logging.rst  models.rst
docs/guides/: dungeon.md  logging.md  quickstart.md
examples/: README.md  example.py  my_agent.py  smart_agent.py
logs/: game.jsonl  smart_agent_20260209_215454.jsonl  smart_agent_20260209_215549.jsonl  smart_agent_20260209_215608.jsonl  test_game.jsonl
src/pyscoundrel/: __init__.py  __main__.py  config.py
src/pyscoundrel/agents/: __init__.py  base.py
src/pyscoundrel/dungeon/: __init__.py  card_pool.py  default_dungeon.yaml
src/pyscoundrel/game/: __init__.py  actions.py  engine.py  state.py
src/pyscoundrel/logging/: __init__.py  events.py  formatters.py  logger.py  state_serializer.py
src/pyscoundrel/models/: __init__.py  card.py  deck.py  player.py  room.py  weapon.py
src/pyscoundrel/ui/: __init__.py  input.py  renderer.py  theme.py
src/pyscoundrel/utils/: __init__.py  constants.py
tests/: conftest.py
tests/integration/: conftest.py  test_agent_play.py  test_game_flow.py  test_logging.py
tests/unit/agents/: test_base.py
tests/unit/dungeon/: test_card_pool.py
tests/unit/dungeon/fixtures/: duplicate_ids.yaml  empty_cards.yaml  invalid_type.yaml  malformed.yaml  minimal.yaml  missing_count.yaml  missing_id.yaml  missing_value.yaml  non_positive_count.yaml  non_positive_value.yaml
tests/unit/game/: test_actions.py  test_state.py
tests/unit/logging/: test_events.py  test_formatters.py  test_state_serializer.py
tests/unit/models/: test_card.py  test_deck.py  test_player.py  test_room.py  test_weapon.py
