[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscoundrel"
version = "0.1.0"
description = "A Python implementation of the Scoundrel roguelike card game"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name="Claude AI"},
  {name="Jean-Michel Daignan"},
]
keywords = ["game", "card-game", "roguelike", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "vulture>=2.11",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
scoundrel = "pyscoundrel.__main__:main"

[project.urls]
Homepage = "https://github.com/jeanmidevacc/pyscoundrel"
Issues = "https://github.com/jeanmidevacc/pyscoundrel/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyscoundrel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pyscoundrel --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that wire multiple components together",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/pyscoundrel/ui/*.py" = ["E501"]

[tool.coverage.run]
omit = [
    "src/pyscoundrel/__main__.py",
    "src/pyscoundrel/ui/*",
    "src/pyscoundrel/config.py",
    "src/pyscoundrel/utils/*",
]

[tool.bandit]
skips = ["B101"]

[tool.vulture]
min_confidence = 80

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pyscoundrel.*"
ignore_missing_imports = true
